# EAZY

./: .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
backend/: .env.example  .gitignore  .hadolint.yaml  Dockerfile  README.md  TEST_SUMMARY_RED_PHASE.md  check_target.py  debug_traffic_data.py  pyproject.toml  test_crawler.py  test_parser.py
backend/alembic/: env.py
backend/alembic/versions/: 03d37afa12f2_add_archived_at_field_to_projects.py  0469845cfb8e_add_task_recursive_fields.py  073a3a5ab290_create_target_table.py  1aef6fceb806_create_traffic_logs_table.py  1fbc4ba81531_add_task_timestamps_and_cancelled.py  240c7ed9d25f_add_scan_models_correct_refs.py  371a28605bcb_change_asset_url_path_to_text.py  3c2a129ac928_add_category_to_api_keys.py  3d8835436778_create_project_table.py  4052f2d0b97d_add_cascade_to_target_foreign_keys.py  4324fc4c04a6_create_api_keys_and_modify_llm_config.py  58583a82aff1_add_is_archived_field_to_projects.py  60060598b451_create_llm_configs_table.py  603d3a60dd6f_add_target_search_indexes.py  64292884d935_add_scan_job_endpoints_association.py  6e9dfb6131e4_add_task_target_created_index.py  8afe47c82292_add_crawl_url_to_tasks.py  b4ffda872654_create_task_table.py  b72e50c328e9_create_target_table.py  c20804e39fe7_create_asset_tables.py  dd972cd03ba5_create_project_table.py  f0732575d8bc_add_scope_to_targets.py
backend/app/: main.py  worker.py
backend/app/application/: __init__.py
backend/app/core/: config.py  connection_manager.py  constants.py  cors.py  crawler_config.py  db.py  dlq.py  errors.py  exceptions.py  lock.py  lock_v2.py  logging.py  middleware.py  priority.py  queue.py  queue_v2.py  recovery.py  redis.py  retry.py  session.py  structured_logger.py  url_validator.py
backend/app/db/: migrations.py
backend/app/domain/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/models/: __init__.py  api_key.py  asset.py  llm_config.py  project.py  scan.py  target.py  task.py  traffic_log.py
backend/app/rules/: blacklist_patterns.yaml  inference_rules.yaml
backend/app/schemas/: __init__.py  api_key.py  error.py  llm_config.py  project.py  target.py
backend/app/services/: api_key_service.py  asset_service.py  crawl_manager.py  crawler_job_service.py  crawler_service.py  interfaces.py  llm_service.py  project_service.py  proxy_service.py  robots_txt_service.py  scope_filter.py  semantic_parser.py  target_service.py  task_service.py  traffic_service.py  url_normalizer.py
backend/app/types/: __init__.py  http.py
backend/app/utils/: __init__.py  url_parser.py
backend/app/workers/: __init__.py  base.py  crawl_worker.py  pool.py  registry.py  runner.py
backend/docker/: docker-compose.yml
backend/scripts/: entrypoint.sh
backend/tests/: __init__.py  conftest.py  test_proxy_service.py
backend/tests/api/: test_health.py  test_latest_task.py  test_projects.py  test_target_search.py  test_targets.py  test_targets_mgmt.py  test_task_cancel.py  test_task_error_handling.py  test_task_list.py  test_tasks.py
backend/tests/core/: test_constants.py  test_cors_config.py  test_crawler_settings.py  test_datetime_utils.py  test_distributed_lock.py  test_dlq_manager.py  test_error_classification.py  test_exceptions.py  test_http_types.py  test_json_parser.py  test_migration_cascade.py  test_orphan_recovery.py  test_priority_aging.py  test_priority_dequeue.py  test_priority_nack.py  test_priority_queue.py  test_queue_backoff.py  test_structured_logger.py  test_task_manager.py  test_task_manager_ack.py  test_worker.py
backend/tests/e2e/: test_active_scan_methods.py  test_scan_completion.py
backend/tests/infra/: __init__.py  test_ci_workflow.py  test_docker_backend.py  (+3 more)
(+596 files in other folders)
