[project]
name = "eazy-backend"
version = "0.1.0"
description = "AI-Powered DAST Tool Backend"
authors = [
    {name = "EAZY Team"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.2.0",
    "redis>=5.0.0",
    "playwright>=1.42.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "structlog>=25.5.0",
    "tldextract>=5.1.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "pyjsparser>=2.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.3.0",
    "isort>=5.13.0",
    "mypy>=1.9.0",
    "ruff>=0.3.4",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
# asyncio_default_fixture_loop_scope = "session"  <-- Removed or commented out
python_files = "test_*.py"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
